@@ -48,6 +48,7 @@
     <module>sis-parent</module>
     <module>sis-core</module>
     <module>sis-webapp</module>
+    <module>sis-app</module>
   </modules>
 
   <build>
